<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginViewModel"
            type="com.example.myapplication.fragments.login.LoginViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/color_grey"
            android:text="@string/terms_condition_content"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size_12"
                android:id="@+id/tvTermsOfService"
                android:onClick="@{()->loginViewModel.showTermsScreen()}"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/color_337ab7"
                android:text="@string/terms_of_service"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="@dimen/text_size_12"
                android:text="&amp;"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/color_grey"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_size_12"
                android:id="@+id/tvPrivacyPolicy"
                android:onClick="@{()->loginViewModel.showPrivacyScreen()}"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/color_337ab7"
                android:text="@string/privacy_policy"
                />


        </LinearLayout>
    </LinearLayout>
</layout>
