<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
      <variable
          name="forgotViewModel"
          type="com.example.myapplication.fragments.forgotPassword.ForgotViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="5dp"
        android:layout_marginHorizontal="@dimen/margin_10dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/forgot_xprate_password"
                android:textColor="@color/color_black"
                android:textSize="16sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/tvTitle"
                app:error="@{forgotViewModel.emailValidator.error}"
                android:id="@+id/tlEmail"
                android:theme="@style/EditTextThemeOverlay"
                android:layout_marginTop="@dimen/margin_40dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:id="@+id/etEmail"
                    android:text="@={forgotViewModel.email}"
                    app:backgroundTint="@color/color_black"
                    android:textSize="@dimen/text_size_14"
                    android:autofillHints="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tlEmail"
                android:layout_marginTop="@dimen/margin_20dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="@{()->forgotViewModel.showLoginScreen()}"
                android:text="@string/sign_in"
                android:textColor="@color/color_fc3131"
                android:textSize="@dimen/text_size_14" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40dp"
                android:layout_below="@+id/tvSignIn"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_30dp"
                android:background="@drawable/red_bg"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:onClick="@{()->forgotViewModel.getResetLink()}"
                android:text="@string/reset_password_link"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
</layout>