<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
      <variable
          name="loginViewModel"
          type="com.example.myapplication.fragments.login.LoginViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="5dp"
            android:layout_marginHorizontal="@dimen/margin_10dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/margin_20dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/connect_xprate"
                    android:textColor="@color/color_black"
                    android:textSize="16sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/tvTitle"
                    android:id="@+id/tlEmail"
                    app:error="@{loginViewModel.emailValidator.error}"
                    android:theme="@style/EditTextThemeOverlay"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:id="@+id/etEmail"
                        android:text="@={loginViewModel.email}"
                        app:backgroundTint="@color/color_black"                    android:textSize="@dimen/text_size_14"
                        android:autofillHints="false" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:layout_below="@+id/tlEmail"
                    android:id="@+id/tlPassword"
                    app:placeholderTextColor="@color/color_grey"
                    android:theme="@style/EditTextThemeOverlay"
                    android:backgroundTint="@null"
                    app:error="@{loginViewModel.passwordEmptyValidator.error}"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14"
                        android:inputType="textPassword"
                        app:passwordToggleEnabled="true"
                        android:text="@={loginViewModel.password}"
                        android:hint="@string/password"
                        android:id="@+id/etPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ivTooltip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tlPassword"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_icons8_info"
                    android:backgroundTint="@color/color_grey"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tlPassword"
                    android:layout_marginTop="@dimen/margin_30dp"
                    android:fontFamily="@font/roboto_bold"
                    android:onClick="@{()->loginViewModel.showSignUpScreen()}"
                    android:text="@string/signup"
                    android:textColor="@color/color_fc3131"
                    android:textSize="@dimen/text_size_14" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSignUp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:onClick="@{()->loginViewModel.showForgotPasswordScreen()}"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/forgot_password"
                    android:textColor="@color/color_fc3131"
                    android:textSize="@dimen/text_size_14" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40dp"
                    android:layout_below="@+id/tvForgotPassword"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:background="@drawable/red_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:onClick="@{()->loginViewModel.login()}"
                    android:text="@string/login_to_peek"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_14" />

                <include
                    layout="@layout/layout_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_marginTop="@dimen/margin_30dp"
                    bind:loginViewModel="@{loginViewModel}" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
