<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BaseActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingVertical="@dimen/margin_15dp"
        android:paddingHorizontal="15dp"
        android:background="@color/color_black"
        android:id="@+id/rlHeader"
        android:elevation="10dp"
        android:layout_height="@dimen/margin_60dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/xprate"
            android:textColor="@color/color_fc3131"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHowItWorks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/how_it_works"
            android:textColor="@color/color_fc3131"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlHeader"
        android:fillViewport="true">
      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:layout_height="match_parent">
          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_marginTop="@dimen/margin_30dp"
              android:id="@+id/rlProgress"
              android:visibility="visible"
              android:layout_marginBottom="@dimen/margin_20dp"
              android:layout_marginHorizontal="@dimen/margin_50dp"
              android:layout_height="wrap_content">
              <ImageView
                  android:layout_width="40dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:id="@+id/ivXprate"
                  android:layout_height="40dp"
                  android:background="@drawable/xprate"/>
              <ImageView
                  android:layout_width="0dp"
                  app:layout_constraintTop_toTopOf="@id/tvConnecting"
                  app:layout_constraintStart_toEndOf="@+id/ivXprate"
                  app:layout_constraintBottom_toBottomOf="@+id/tvConnecting"
                  android:id="@+id/ivreddotted"
                  app:layout_constraintEnd_toStartOf="@+id/tvConnecting"
                  android:layout_height="10dp"
                  android:layout_marginHorizontal="@dimen/margin_10dp"
                  android:background="@drawable/red_dotted_line"/>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tvConnecting"
                  app:layout_constraintTop_toTopOf="@id/ivXprate"
                  app:layout_constraintBottom_toBottomOf="@+id/ivXprate"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:fontFamily="@font/roboto_regular"
                  android:text="@string/connecting"
                  android:textSize="@dimen/text_size_12"
                  android:textStyle="italic"
                  android:textColor="@color/color_grey" />
              <ImageView
                  android:layout_width="20dp"
                  app:layout_constraintTop_toTopOf="@id/tvConnecting"
                  app:layout_constraintStart_toEndOf="@+id/tvConnecting"
                  app:layout_constraintBottom_toBottomOf="@+id/tvConnecting"
                  android:id="@+id/ivreddotted2"
                  android:layout_height="10dp"
                  android:layout_marginHorizontal="@dimen/margin_10dp"
                  android:background="@drawable/red_dotted_line"/>

              <ImageView
                  android:layout_width="0dp"
                  app:layout_constraintEnd_toStartOf="@+id/ivCompany"
                  app:layout_constraintTop_toTopOf="@id/tvConnecting"
                  app:layout_constraintStart_toEndOf="@+id/ivreddotted2"
                  app:layout_constraintBottom_toBottomOf="@+id/tvConnecting"
                  android:id="@+id/ivgreydotted"
                  android:layout_height="10dp"
                  android:layout_marginEnd="@dimen/margin_10dp"
                  android:background="@drawable/grey_dotted_line"/>
              <ImageView
                  android:layout_width="40dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:id="@+id/ivCompany"
                  android:layout_marginStart="@dimen/margin_10dp"
                  android:layout_height="40dp"
                  android:src="@drawable/grey_bg"/>


          </androidx.constraintlayout.widget.ConstraintLayout>

          <androidx.fragment.app.FragmentContainerView
              android:id="@+id/nav_host_fragment"
              android:name="androidx.navigation.fragment.NavHostFragment"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              app:defaultNavHost="true"
              app:navGraph="@navigation/nav_graph" />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tvMadeInIndia"
              android:gravity="center_horizontal"
              android:layout_marginBottom="@dimen/margin_20dp"
              android:fontFamily="@font/roboto_medium"
              android:text="@string/text_made_in_india"
              android:textColor="@color/color_black" />

      </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>